<resources>
    <string name="a11y_action_pip_move_done">Done</string>
    <string name="a11y_action_pip_move_down">Move down</string>
    <string name="a11y_action_pip_move_left">Move left</string>
    <string name="a11y_action_pip_move_right">Move right</string>
    <string name="a11y_action_pip_move_up">Move up</string>
    <string name="a11y_pip_menu_entered">Picture-in-Picture menu.</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_action_pip_resize">Resize</string>
    <string name="accessibility_action_pip_stash">Stash</string>
    <string name="accessibility_action_pip_unstash">Unstash</string>
    <string name="accessibility_action_start_one_handed">Start one-handed mode</string>
    <string name="accessibility_action_stop_one_handed">Exit one-handed mode</string>
    <string name="accessibility_app_usage_settings">App usage settings</string>
    <string name="accessibility_bubble_dismissed">Bubble dismissed.</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_divider">Split screen divider</string>
    <string name="accessibility_recent_apps">Recent apps</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="accessibility_split_bottom">Split bottom</string>
    <string name="accessibility_split_left">Split left</string>
    <string name="accessibility_split_right">Split right</string>
    <string name="accessibility_split_top">Split top</string>
    <string name="action_add_to_workspace">Add to home screen</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_to_workspace">Move to home screen</string>
    <string name="action_resize">Resize</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_share">Share</string>
    <string name="action_split">Split</string>
    <string name="activity_launch_on_secondary_display_failed_text">App does not support launch on secondary displays.</string>
    <string name="activity_not_available">"App isn't available"</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the home screen</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="added_to_home_screen_accessibility_text">%1$s widget added to home screen</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No apps found matching \"%1$s\"</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_prediction_tip">Your predicted apps</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow home screen rotation</string>
    <string name="allset_button_hint">Tap the home button to go to your home screen</string>
    <string name="allset_description_generic">You’re ready to start using your %1$s</string>
    <string name="allset_hint">Swipe up to go home</string>
    <string name="allset_navigation_settings"><annotation id="link">System navigation settings</annotation></string>
    <string name="allset_title">All set!</string>
    <string name="always_show_taskbar">Always show Taskbar</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_icon_text">App Icon</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_installing_title">%1$s installing, %2$s complete</string>
    <string name="app_launch_tracker_class">com.android.launcher3.appprediction.PredictionAppTracker</string>
    <string name="app_name">Launcher3</string>
    <string name="app_waiting_download_title">%1$s waiting to install</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assistant_gesture_feedback_swipe_not_diagonal">Make sure you swipe diagonally.</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add app icons to home screen</string>
    <string name="back_gesture_tutorial_title">Go back</string>
    <string name="gesture_tutorial_action_button_label">Done</string>
    <string name="home_cus_layout_label_subtitle">Display app label on home screen</string>
    <string name="home_cus_layout_label_title">App label</string>
    <string name="home_cus_layout_serbar_title">Search bar</string>
    <string name="home_cus_layout_subtitle">Adjust grid, icon label, and search bar on the home screen</string>
    <string name="home_cus_layout_title">Home screen layout</string>
    <string name="home_cus_wallpaper_subtitle">Select wallpapers and color themes</string>
    <string name="home_gesture_tutorial_title">Go home</string>
    <string name="nothing_setting_display_searchbar">Display search bar in the dock</string>
    <string name="nothing_wallpaper_scrolling_summary">Enable wallpaper scrolling on the home screen</string>
    <string name="nothing_wallpaper_scrolling_title">Wallpaper Scrolling</string>
    <string name="nothing_wallpaper_style_appicon_title">Icon Pack</string>
    <string name="nothing_wallpaper_style_grid_title">App Grid</string>
    <string name="notification_dots_title">Notification dots</string>
    <string name="nt_all_apps_search_action_menu_tag">nt_all_apps_search_action_menu_tag</string>
    <string name="nt_all_apps_search_search_tag">nt_all_apps_search_search_tag</string>
    <string name="nt_all_apps_settings_content_description">Settings</string>
    <string name="nt_hidden_app_icons_entrance_summary">Hide app icons from Home Screen and App Drawer</string>
    <string name="nt_hidden_app_icons_entrance_title">Hide app icons</string>
    <string name="overview_gesture_tutorial_title">Switch apps</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="smartspace_preferences_in_settings">At A Glance</string>
    <string name="smartspace_preferences_in_settings_desc">At the top of your Home screen</string>
    <string name="styles_wallpaper_button_text">Wallpaper &amp; style</string>
    <string name="summary_double_tap_to_lock">Double-tap a blank area on the Home screen to lock the screen.</string>
    <string name="taskbar_edu_done">Done</string>
    <string name="taskbar_edu_features">Do more with the Taskbar</string>
    <string name="taskbar_edu_settings_persistent">Turn on gesture navigation in Settings to auto-hide the Taskbar</string>
    <string name="taskbar_edu_splitscreen">Drag an app to the side to use 2 apps at once</string>
    <string name="taskbar_edu_suggestions">Get app suggestions based on your routine</string>
    <string name="title_double_tap_to_lock">Double-tap to lock</string>
    <string name="title_show_google_app">Swipe to access the Google app</string>
</resources>