<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto">
    <com.android.launcher3.settings.NotificationDotsPreference android:persistent="false" android:title="@string/notification_dots_title" android:key="pref_icon_badging" android:widgetLayout="@layout/notification_pref_warning">
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <extra android:name=":settings:fragment_args_key" android:value="notification_badging" />
        </intent>
    </com.android.launcher3.settings.NotificationDotsPreference>
    <com.nothing.ui.support.NtCustSwitchPreference android:persistent="true" android:title="@string/auto_add_shortcuts_label" android:key="pref_add_icon_to_home" android:summary="@string/auto_add_shortcuts_description" android:defaultValue="true" launcher:logIdOff="614" launcher:logIdOn="613" />
    <com.nothing.ui.support.NtCustSwitchPreference android:persistent="true" android:title="@string/title_show_google_app" android:key="pref_enable_minus_one" android:summary="@string/pref_show_google_now_summary" android:defaultValue="true" />
    <com.nothing.ui.support.NtCustSwitchPreference android:persistent="true" android:title="@string/title_double_tap_to_lock" android:key="pref_double_tap_off_screen" android:summary="@string/summary_double_tap_to_lock" android:defaultValue="true" />
    <com.nothing.ui.support.NtCustSwitchPreference android:persistent="true" android:title="@string/allow_rotation_title" android:key="pref_allowRotation" android:summary="@string/allow_rotation_desc" android:defaultValue="false" />
    <Preference android:title="@string/nt_hidden_app_icons_entrance_title" android:key="pref_edit_hidden_apps" android:summary="@string/nt_hidden_app_icons_entrance_summary" />
</androidx.preference.PreferenceScreen>