<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.launcher3.settings.NotificationDotsPreference android:persistent="false" android:title="@string/notification_dots_title" android:key="pref_icon_badging" android:widgetLayout="@layout/notification_pref_warning">
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <extra android:name=":settings:fragment_args_key" android:value="notification_badging" />
        </intent>
    </com.android.launcher3.settings.NotificationDotsPreference>
    <androidx.preference.PreferenceScreen android:persistent="false" android:title="@string/smartspace_preferences_in_settings" android:key="pref_smartspace" android:summary="@string/smartspace_preferences_in_settings_desc" />
    <SwitchPreference android:persistent="true" android:title="@string/auto_add_shortcuts_label" android:key="pref_add_icon_to_home" android:summary="@string/auto_add_shortcuts_description" android:defaultValue="true" />
    <SwitchPreference android:title="@string/title_show_google_app" android:key="pref_enable_minus_one" android:summary="@string/pref_show_google_now_summary" android:defaultValue="true" />
    <SwitchPreference android:persistent="true" android:title="@string/allow_rotation_title" android:key="pref_allowRotation" android:summary="@string/allow_rotation_desc" android:defaultValue="false" />
    <androidx.preference.PreferenceScreen android:persistent="false" android:title="Developer Options" android:key="pref_developer_options" android:fragment="com.android.launcher3.settings.DeveloperOptionsFragment" />
</androidx.preference.PreferenceScreen>