<?xml version="1.0" encoding="utf-8"?>
<com.nothing.launcher.allapps.search.NTAppsSearchContainerLayout android:id="@id/search_container_all_apps" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="@dimen/all_apps_search_container_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rl_all_apps_search" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/nt_search_bar_margin_bottom">
        <View android:id="@id/search_bar_ripple_view" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="no" />
        <ImageButton android:id="@id/btn_all_apps_search_search" android:tag="@string/nt_all_apps_search_search_tag" android:background="@null" android:clickable="true" android:layout_width="@dimen/all_apps_search_icon_height" android:layout_height="@dimen/all_apps_search_icon_height" android:src="@drawable/nt_ic_all_apps_search" android:layout_centerVertical="true" android:contentDescription="@string/all_apps_search_bar_hint" android:layout_marginStart="@dimen/nt_all_apps_search_container_padding_left" />
        <ImageButton android:id="@id/btn_all_apps_search_menu" android:tag="@string/nt_all_apps_search_action_menu_tag" android:background="@drawable/nt_ic_background_borderless" android:layout_width="@dimen/all_apps_search_icon_height" android:layout_height="@dimen/all_apps_search_icon_height" android:src="@drawable/nt_ic_all_apps_menu" android:layout_centerVertical="true" android:contentDescription="@string/nt_all_apps_settings_content_description" android:layout_marginEnd="@dimen/nt_all_apps_search_container_padding_left" android:layout_alignParentEnd="true" />
        <com.android.launcher3.ExtendedEditText android:textSize="@dimen/all_apps_search_search_text_size" android:textColor="@color/all_apps_search_text_color" android:ellipsize="end" android:id="@id/text_all_apps_search_search" android:background="@null" android:focusable="true" android:focusableInTouchMode="true" android:saveEnabled="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxLines="1" android:scrollHorizontally="true" android:singleLine="true" android:inputType="textCapWords|textNoSuggestions" android:imeOptions="actionSearch" android:fontFamily="sans-serif" android:layout_toStartOf="@id/btn_all_apps_search_menu" android:layout_toEndOf="@id/btn_all_apps_search_search" android:letterSpacing="0.01" android:lineHeight="@dimen/all_apps_search_search_text_line_height" android:textFontWeight="400" />
    </RelativeLayout>
</com.nothing.launcher.allapps.search.NTAppsSearchContainerLayout>