<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/title" android:paddingBottom="@dimen/taskbar_edu_tooltip_vertical_margin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/taskbar_edu_features" app:layout_constraintBottom_toTopOf="@id/splitscreen_animation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.TaskbarEduTooltip.Title" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/splitscreen_animation" android:layout_width="@dimen/taskbar_edu_features_lottie_width" android:layout_height="@dimen/taskbar_edu_features_lottie_height" app:layout_constraintEnd_toEndOf="@id/splitscreen_text" app:layout_constraintStart_toStartOf="@id/splitscreen_text" app:layout_constraintTop_toBottomOf="@id/title" app:lottie_autoPlay="true" app:lottie_loop="true" />
    <TextView android:id="@id/splitscreen_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/taskbar_edu_splitscreen" app:layout_constraintEnd_toStartOf="@id/settings_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/splitscreen_animation" style="@style/TextAppearance.TaskbarEduTooltip.Subtext" />
    <androidx.constraintlayout.widget.Group android:id="@id/settings_edu" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="settings_animation,settings_text" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/settings_animation" android:layout_width="@dimen/taskbar_edu_features_lottie_width" android:layout_height="@dimen/taskbar_edu_features_lottie_height" app:layout_constraintEnd_toEndOf="@id/settings_text" app:layout_constraintStart_toStartOf="@id/settings_text" app:layout_constraintTop_toBottomOf="@id/title" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/taskbar_edu_settings" />
    <TextView android:id="@id/settings_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/taskbar_edu_settings_persistent" android:layout_marginStart="@dimen/taskbar_edu_features_horizontal_spacing" app:layout_constraintEnd_toStartOf="@id/suggestions_text" app:layout_constraintStart_toEndOf="@id/splitscreen_text" app:layout_constraintTop_toBottomOf="@id/settings_animation" style="@style/TextAppearance.TaskbarEduTooltip.Subtext" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/suggestions_animation" android:layout_width="@dimen/taskbar_edu_features_lottie_width" android:layout_height="@dimen/taskbar_edu_features_lottie_height" app:layout_constraintEnd_toEndOf="@id/suggestions_text" app:layout_constraintStart_toStartOf="@id/suggestions_text" app:layout_constraintTop_toBottomOf="@id/title" app:lottie_autoPlay="true" app:lottie_loop="true" />
    <TextView android:id="@id/suggestions_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/taskbar_edu_suggestions" android:layout_marginStart="@dimen/taskbar_edu_features_horizontal_spacing" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/settings_text" app:layout_constraintTop_toBottomOf="@id/suggestions_animation" style="@style/TextAppearance.TaskbarEduTooltip.Subtext" />
    <androidx.constraintlayout.widget.Barrier android:id="@id/edu_barrier_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="splitscreen_text,settings_text,suggestions_text" />
    <Button android:textColor="@null" android:id="@id/done_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/taskbar_edu_done" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/edu_barrier_bottom" style="@style/TaskbarEdu.Button.Done" />
</androidx.constraintlayout.widget.ConstraintLayout>