<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:theme="@style/GestureTutorialActivity" android:background="?android:^attr-private/preferenceActivityStyle" android:paddingTop="@dimen/gesture_tutorial_menu_padding_top" android:paddingBottom="@dimen/gesture_tutorial_menu_padding_bottom" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="@dimen/gesture_tutorial_menu_padding_horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/gesture_tutorial_menu_home_button" android:background="@drawable/gesture_tutorial_menu_home_button_background" android:layout_width="fill_parent" android:layout_height="@dimen/gesture_tutorial_menu_button_height" android:clipToOutline="true" app:layout_constraintBottom_toTopOf="@id/gesture_tutorial_menu_back_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gesture_tutorial_home_step_shape" android:scaleType="fitXY" android:adjustViewBounds="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:id="@id/gesture_tutorial_menu_home_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_gesture_tutorial_title" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.GestureTutorial.MenuButton.Home" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/gesture_tutorial_menu_back_button" android:background="@drawable/gesture_tutorial_menu_back_button_background" android:layout_width="fill_parent" android:layout_height="@dimen/gesture_tutorial_menu_button_height" android:layout_marginTop="@dimen/gesture_tutorial_menu_button_spacing" android:clipToOutline="true" app:layout_constraintBottom_toTopOf="@id/gesture_tutorial_menu_overview_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gesture_tutorial_menu_home_button">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gesture_tutorial_back_step_shape" android:scaleType="fitXY" android:adjustViewBounds="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@id/gesture_tutorial_menu_back_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back_gesture_tutorial_title" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.GestureTutorial.MenuButton.Back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/gesture_tutorial_menu_overview_button" android:background="@drawable/gesture_tutorial_menu_overview_button_background" android:layout_width="fill_parent" android:layout_height="@dimen/gesture_tutorial_menu_button_height" android:layout_marginTop="@dimen/gesture_tutorial_menu_button_spacing" android:clipToOutline="true" app:layout_constraintBottom_toTopOf="@id/guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gesture_tutorial_menu_back_button">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gesture_tutorial_overview_step_shape" android:scaleType="fitXY" android:adjustViewBounds="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:id="@id/gesture_tutorial_menu_overview_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/overview_gesture_tutorial_title" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.GestureTutorial.MenuButton.Overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/gesture_tutorial_menu_done_button_spacing" />
    <Button android:id="@id/gesture_tutorial_menu_done_button" android:background="@drawable/gesture_tutorial_action_button_background" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/gesture_tutorial_action_button_label" android:stateListAnimator="@null" android:backgroundTint="?android:^attr-private/pointerIconSpotTouch" android:layout_marginVertical="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/guideline" style="@style/TextAppearance.GestureTutorial.ButtonLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>